Fix inner child inside container when used in tab visible in short width

--- a/src/blocks/tabs/editor.lazy.scss
+++ b/src/blocks/tabs/editor.lazy.scss
@@ -86,6 +86,10 @@
 			margin: 0;
 		}
 	}
+
+	.uagb-container-has-children.wp-block-uagb-container > .uagb-container-inner-blocks-wrap > .block-editor-inner-blocks > .block-editor-block-list__layout > .wp-block {
+		width: 100%;
+	} // To resolve inner child with short width when container used inside tab body - https://d.pr/i/dGSoPT.
 }
 
 .uag-advance-panel-body-layout {
@@ -721,4 +725,9 @@
 	.uagb-tabs__body-wrap {
 		max-width: 100%;
 	}
+}
+
+
+.uagb-tabs__body-wrap .uagb-container-has-children.wp-block-uagb-container > .uagb-container-inner-blocks-wrap > .block-editor-inner-blocks > .block-editor-block-list__layout > .wp-block {
+	width: 100%;
 }
